fix:align-items value change

--- a/src/sections/experiences/experiences.css
+++ b/src/sections/experiences/experiences.css
@@ -118,7 +118,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: start;
+        align-items: flex-start;
     }
 
     .jobDuration {
